# English_Word_Frequency_Analyzer

./: CMakeLists.txt  README.md  file_reader.cpp  file_reader.h  main.cpp  plotter.cpp  plotter.h  word_counter.cpp  word_counter.h  word_processor.cpp  word_processor.h
